<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">KMPアプリ</string>
    <string name="splash_title">起動</string>
    <string name="splash_user_id_label">ユーザーID: %s1</string>
    <string name="splash_app_label">コーヒータイプのアプリです</string>
    <string name="splash_first_time_button">はじめる</string>
    <string name="splash_error_label">エラーです。アプリを再度実行してください。</string>
    <string name="splash_image_contents_description">起動時のコーヒー画像です</string>
    <string name="start_title">はじめに</string>
    <string name="start_overview">ユーザー情報を登録します。入力せずに進んでも構いません。</string>
    <string name="start_nick_name_field_label">ニックネーム(省略可能)</string>
    <string name="start_email_field_label">メールアドレス(省略可能)</string>
    <string name="start_register_button">この内容で登録する</string>
    <string name="email_validation_error">XXX＠YYY.ZZの形式で入力してください。</string>
    <string name="home_title">ホーム</string>
    <string name="home_point_value">%1$d ポイント</string>
    <string name="home_point_value_default">0 ポイント</string>
    <string name="home_un_setting_nickname">ニックネーム未設定</string>
    <string name="home_un_setting_email">Email未設定</string>
    <string name="home_menu_get_point">ポイント獲得</string>
    <string name="home_menu_use_point">ポイント利用</string>
    <string name="home_loading_error_label">エラーが発生しました。</string>
    <string name="point_get_title">ポイント獲得</string>
    <string name="point_get_input_back_button_content_description">ホーム画面に戻るボタンです</string>
    <string name="point_get_input_overview">現在保持しているポイント数</string>
    <string name="point_get_input_attention">(※最大で保持できるポイントは%1$dです)</string>
    <string name="point_get_input_max_over_error">最大で保持できるポイントを超えています。</string>
    <string name="point_get_input_text_field_label">ポイントを入力</string>
    <string name="point_get_input_confirm_button">確認画面へ進む</string>
    <string name="point_get_confirm_back_button_content_description">ポイント入力画面に戻るボタンです</string>
    <string name="point_get_confirm_overview">ポイントを獲得します！</string>
    <string name="point_get_confirm_detail">よろしければ「ポイントを獲得する」ボタンをタップしてください。</string>
    <string name="point_get_confirm_point_label">獲得ポイント</string>
    <string name="point_get_confirm_execute_button">ポイントを獲得する</string>
    <string name="point_get_confirm_error">エラー</string>
    <string name="point_get_confirm_complete_dialog_message">ポイントを獲得しました！</string>
    <string name="point_use_title">ポイント利用</string>
    <string name="point_use_confirm_back_button_content_description">ポイント入力画面に戻るボタンです</string>
    <string name="point_use_input_error">エラー</string>
    <string name="point_use_input_overview">現在保持しているポイント数</string>
    <string name="point_use_input_text_field_label">利用ポイント入力</string>
    <string name="point_use_input_text_field_error_over_point">保有ポイントが不足しています。</string>
    <string name="point_use_input_confirm_button">確認画面へ進む</string>
    <string name="point_use_confirm_overview">ポイントを使用します。</string>
    <string name="point_use_confirm_detail">よろしければ「ポイントを使用する」ボタンをタップしてください。</string>
    <string name="point_use_confirm_point_label">使用ポイント</string>
    <string name="point_use_confirm_execute_button">ポイントを使用する</string>
    <string name="point_history_acquire">ポイント獲得</string>
    <string name="point_history_use">ポイント使用</string>
    <string name="point_history_point_label">%1$d ポイント</string>
    <string name="dialog_cancel">キャンセル</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_title_error">エラー</string>
    <string name="dialog_title_success">成功</string>
    <string name="point_use_success_message">ポイント利用に成功しました！</string>
</resources>